# SSD300_PyTorch_cpp_TRTorch

./: README.md  before_build.sh
src/: CMakeLists.txt  main.cpp
src/object_detector/: CMakeLists.txt
src/object_detector/include/: object_detector.h
src/object_detector/src/: object_detector.cpp
